--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-router": "^1.47.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
